@@ -18,9 +18,7 @@
  */
 package de.uni_passau.fim.se2.litterbox.analytics;
 
-import de.uni_passau.fim.se2.litterbox.analytics.extraction.ExtractionTool;
-import de.uni_passau.fim.se2.litterbox.analytics.metric.MetricTool;
-import de.uni_passau.fim.se2.litterbox.utils.GroupConstants;
+import de.uni_passau.fim.se2.litterbox.utils.FinderGroup;
 import de.uni_passau.fim.se2.litterbox.utils.IssueTranslator;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -81,7 +79,7 @@ public class ResourceBundleTest {
                 .matcher(hint)
                 .results()
                 .map(MatchResult::group)
-                .collect(Collectors.toList());
+                .toList();
         String currentToken = "";
         for (String match : matches) {
             if (!currentToken.isEmpty()) {
@@ -115,7 +113,7 @@ public class ResourceBundleTest {
     @ValueSource(strings = {"de", "en", "es"})
     public void checkBugResourceHints(String locale) {
         ResourceBundle hints = ResourceBundle.getBundle("IssueHints", Locale.forLanguageTag(locale));
-        List<IssueFinder> bugFinders = IssueTool.getFinders(GroupConstants.BUGS);
+        List<IssueFinder> bugFinders = IssueTool.getFinders(FinderGroup.BUGS);
         for (IssueFinder finder : bugFinders) {
             for (String key : finder.getHintKeys()) {
                 assertWithMessage("Language " + locale + ", hint key " + key + " not found in resources").that(hints.keySet()).contains(key);
@@ -129,7 +127,7 @@ public class ResourceBundleTest {
     @ValueSource(strings = {"de", "en", "es"})
     public void checkSmellResourceHints(String locale) {
         ResourceBundle hints = ResourceBundle.getBundle("IssueHints", Locale.forLanguageTag(locale));
-        List<IssueFinder> smellFinders = IssueTool.getFinders(GroupConstants.SMELLS);
+        List<IssueFinder> smellFinders = IssueTool.getFinders(FinderGroup.SMELLS);
         for (IssueFinder finder : smellFinders) {
             for (String key : finder.getHintKeys()) {
                 assertWithMessage("Language " + locale + ", hint key " + key + " not found in resources").that(hints.keySet()).contains(key);
@@ -143,7 +141,7 @@ public class ResourceBundleTest {
     @ValueSource(strings = {"de", "en", "es"})
     public void checkPerfumeResourceHints(String locale) {
         ResourceBundle hints = ResourceBundle.getBundle("IssueHints", Locale.forLanguageTag(locale));
-        List<IssueFinder> perfumeFinders = IssueTool.getFinders(GroupConstants.PERFUMES);
+        List<IssueFinder> perfumeFinders = IssueTool.getFinders(FinderGroup.PERFUMES);
         for (IssueFinder finder : perfumeFinders) {
             for (String key : finder.getHintKeys()) {
                 assertWithMessage("Language " + locale + ", hint key " + key + " not found in resources").that(hints.keySet()).contains(key);
@@ -169,8 +167,8 @@ public class ResourceBundleTest {
     public void checkSpuriousNames(String locale) {
         ResourceBundle names = ResourceBundle.getBundle("IssueNames", Locale.forLanguageTag(locale));
         Collection<String> finders = new HashSet<>(IssueTool.getAllFinderNames());
-        finders.addAll(new MetricTool().getMetricNames()); // TODO: Maybe metrics should go in a different resource file?
-        finders.addAll(new ExtractionTool().getExtractorNames());
+        finders.addAll(new ProgramMetricAnalyzer().getMetricNames()); // TODO: Maybe metrics should go in a different resource file?
+        finders.addAll(new ProgramExtractionAnalyzer().getExtractorNames());
         for (String key : Collections.list(names.getKeys())) {
             if (!key.contains("fix")) {
                 assertWithMessage("Language " + locale + ", key " + key + " does not match a finder").that(finders).contains(key);
@@ -182,7 +180,7 @@ public class ResourceBundleTest {
     @ValueSource(strings = {"de", "en", "es"})
     public void checkSpuriousHints(String locale) {
         ResourceBundle names = ResourceBundle.getBundle("IssueHints", Locale.forLanguageTag(locale));
-        List<IssueFinder> allFinders = IssueTool.getFinders(GroupConstants.ALL);
+        List<IssueFinder> allFinders = IssueTool.getFinders(FinderGroup.ALL);
         Set<String> hintKeys = allFinders.stream().flatMap(f -> f.getHintKeys().stream()).collect(Collectors.toSet());
         for (String key : Collections.list(names.getKeys())) {
             if (!key.contains("fix")) {
